Set timer and display working countdown

--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <p class="description"> 
-                        This is a trivia game about 90's Nickelodeon cartoons that I grew up watching. You'll have
-                        30 seconds to answer each question. 
-                    </p>
+                    <h2><button id="start" > Start </button></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col">    
-                    <h4><button id="time">Click Here to begin</button></h4>
+                    <h4 id="time"></h4>
                 </div>
             </div>
             <div class="row">
