Successfully got questions 1-3 working and collecting correct, incorrect, and unanswered questions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1> 90's Nickelodeon Trivia! </h1>
+                    <h1 id="title"> 90's Nickelodeon Trivia! </h1>
                 </div>
             </div>
             <div class="row">
@@ -29,7 +29,7 @@
             </div>
             <div class="row">
                 <div class="col">    
-                    <h4 id="time"></h4>
+                    <h4 id="time" class="d-none"></h4>
                 </div>
             </div>
             <div class="row">
